SN-3: hash the password
