# cmd/api/api.go
@@ -82,7 +82,7 @@ func (app *application) mount() http.Handler {
 			})
 
 			// public routes
-			r.Route("authentication", func(r chi.Router) {
+			r.Route("/authentication", func(r chi.Router) {
 				r.Post("/user", app.registerUserHandler)
 			})
 		})
